tests/neg/while5-false.js
// Example done in class
function foo() {
    var x = 0;
    while (x <= 5){
        pred(1<=0);
        x = x + 1;
    }
    assert(x == 6);
}
